--- a/src/styles.css
+++ b/src/styles.css
@@ -205,6 +205,11 @@ body {
   padding: 0 20px;
   line-height: 3.5rem;
 }
+@media screen and (min-width: 1024px)  and (max-width: 1145px){
+  .header {
+    line-height: 1.1;
+  }
+}
 .header .span {
   display: inline-block;
 }
@@ -437,7 +442,7 @@ body {
   top: -100px;
   left: 305px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1150px) {
   .finger {
     display: none;
   }
